--- a/Hobee/src/main/webapp/resources/css/admin/adminNoticeEdit.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminNoticeEdit.css
@@ -21,8 +21,7 @@
       폼 카드
 ================================ */
 .form-card {
-    width: 100%;
-    max-width: 900px;
+    width: 1300px;
     margin: 0 auto;
     background: #fff;
     padding: 35px;
