--- a/Hobee/src/main/webapp/resources/css/admin/adminPostDeletedList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminPostDeletedList.css
@@ -10,18 +10,10 @@
     min-height: 100vh;
 }
 
-/* 제목 */
-.page-title {
-    font-size: 32px;
-    font-weight: 800;
-    margin-bottom: 28px;
-    margin-left: 5px;
-}
 
 /* 카드 박스 */
 .card-box {
-    width: 100%;
-    max-width: 1200px;
+    width: 1400px;
     margin: 0 auto;
     background: #ffffff;
     padding: 35px 40px;
