--- a/Hobee/src/main/webapp/resources/css/admin/adminCommentList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminCommentList.css
@@ -10,19 +10,11 @@
     min-height: 100vh;
 }
 
-.page-title {
-    font-size: 26px;
-    font-weight: 700;
-    color: #222;
-    margin-bottom: 25px;
-}
-
 /* ============================
    🔵 카드 박스
 ============================ */
 .table-card {
-    width: 100%;
-    max-width: 1100px;
+    width: 1400px;
     margin: 0 auto;
     padding: 30px 36px;
     background: #ffffff;
