--- a/Hobee/src/main/webapp/resources/css/admin/adminFaqList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminFaqList.css
@@ -10,19 +10,11 @@
     min-height: 100vh;
 }
 
-.main-header h1 {
-    font-size: 26px;
-    font-weight: 700;
-    margin-bottom: 25px;
-    color: #333;
-}
-
 /* ==============================
    📌 카드 박스
 ============================== */
 .table-card {
-    width: 100%;
-    max-width: 1100px;
+    width: 1300px;
     margin: 0 auto;
     background: #fff;
     padding: 35px;
