--- a/Hobee/src/main/webapp/resources/css/admin/adminPaymentList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminPaymentList.css
@@ -122,6 +122,7 @@ body {
 .filter-btn.search {
     background: #2573ff;
     color: white;
+    border: solid 1px #2573ff;
 }
 
 .filter-btn.reset {
