--- a/Hobee/src/main/webapp/resources/css/user/faqList.css
+++ b/Hobee/src/main/webapp/resources/css/user/faqList.css
@@ -1,7 +1,29 @@
 @charset "UTF-8";
+/* =========================================================
+   GLOBAL RESET
+========================================================= */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+		sans-serif;
+}
+
+body {
+	background: #f4f6fa;
+	color: #222;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+main{
+	padding-bottom:30px;
+}
+
 
 .faq-container {
-    max-width: 900px;
+    width: 900px;
     margin: 50px auto;
     padding: 10px;
 }
